Quitado el div de abajo

--- a/src/components/ThemeSwitch.astro
+++ b/src/components/ThemeSwitch.astro
@@ -26,7 +26,7 @@ import { Icon } from 'astro-icon/components'
       <option value='red'>Rojo</option>
       <option value='pink'>Rosa</option>
       <option value='orange'>Naranja</option>
-      <option value='cyber'>Amarillo</option>
+      <option value='cyber'>Gris</option>
       <option value='green'>Verde</option>
       <option value='blue'>Azul</option>
     </select>
